--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Vue.js</title>
     <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         html, body {
             height: 100%;
@@ -24,25 +25,20 @@
         }
     </style>
 </head>
-<body>
+<body class="h-full grid place-items-center">
     <div id="app">
-        <!-- Используется тернарный оператор -->
-        <button :class="active ? 'text-red' : 'text-green'" @click="toggle">Click me</button>
+        <section>
+            <h2 class="font-bold mb-2">Assigments</h2>
+
+            <ul>
+                <li>Finish project</li>
+                <li>Read chapter 4</li>
+                <li>Turn in homework</li>
+            </ul>
+        </section>
     </div>
 
     <script>
-        Vue.createApp({
-            data() {
-                return {
-                    active: false
-                };
-            },
-
-            methods: {
-                toggle() {
-                    this.active = ! this.active
-                }
-            }
-        }).mount('#app');
+        Vue.createApp({}).mount('#app');
     </script>
 </body>
