--- a/index.html
+++ b/index.html
@@ -27,18 +27,76 @@
 </head>
 <body class="h-full grid place-items-center">
     <div id="app">
-        <section>
-            <h2 class="font-bold mb-2">Assigments</h2>
+        <section v-show="inProgressAssigmnets.length">
+            <h2 class="font-bold mb-2">In Progress</h2>
 
             <ul>
-                <li>Finish project</li>
-                <li>Read chapter 4</li>
-                <li>Turn in homework</li>
-            </ul>
+                <li 
+                    v-for="assigment in inProgressAssigmnets" 
+                    :key="assigment.id"
+                >
+                    <label>
+                        {{ assigment.name }}
+                        <input type="checkbox" v-model="assigment.complete">
+                    </label>
+                </li>
+           </ul>
+
+           <!--
+           <pre>
+            {{ assigments }}
+           </pre>
+            -->
+        </section>
+
+        <!-- Можно также использовать v-if -->
+        <section v-show="completedAssigments.length" class="mt-8">
+            <h2 class="font-bold mb-2">Completed</h2>
+
+            <ul>
+                <li 
+                    v-for="assigment in completedAssigments" 
+                    :key="assigment.id"
+                >
+                    <label>
+                        {{ assigment.name }}
+                        <input type="checkbox" v-model="assigment.complete">
+                    </label>
+                </li>
+           </ul>
+
+           <!--
+           <pre>
+            {{ assigments }}
+           </pre>
+            -->
         </section>
     </div>
 
     <script>
-        Vue.createApp({}).mount('#app');
+        let app = {
+            data () {
+                return {
+                    assigments: [
+                        { name: 'Finish project', complete: false, id: 1 },
+                        { name: 'Read chapter 4', complete: false, id: 2 },
+                        { name: 'Turn in homework', complete: false, id: 3 },
+
+                    ]    
+                }
+            },
+
+            <!-- Вычисляемые свойства -->
+            computed: {
+                inProgressAssigmnets() {
+                    return this.assigments.filter(a => ! a.complete); 
+                },
+                completedAssigments() {
+                    return this.assigments.filter(a => a.complete);
+                }
+            }
+        };
+
+        Vue.createApp(app).mount('#app');
     </script>
 </body>
