--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 
-<body class="h-full grid place-items-center bg-red-600">
+<body class="h-full grid place-items-center bg-gray">
     <div id="app">
         <section v-show="inProgressAssigmnets.length">
             <h2 class="font-bold mb-2">In Progress</h2>
