--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="h-full">
 
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Vue.js</title>
@@ -11,23 +12,15 @@
 
 <body class="h-full grid place-items-cente">
     <div id="app">
-        <app-button>Test2</app-button>
+        <app-button>Test3</app-button>
     </div>
 
-    <script>
+    <script type="module">
+        import AppButton from './js/components/AppButton.jss';
+
         let app = {
             components: {
-                'appButton': {
-                    template: `
-                        <button class="bg-gray-200 hover:bg-gray-400 border rounded px-5 py-2 disabled:cursor-not-allowed" :disabled="processing"><slot /></button>
-                    `,
-
-                    data() {
-                        return {
-                            processing: true
-                        }
-                    }
-                }
+                'appButton': appButton
             }
         };
 
