--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="h-full grid place-items-cente">
+<body class="h-full grid place-items-center">
     <div id="app">
         <app-button>Test3</app-button>
     </div>
 
-    <script type="module">
-        import AppButton from './js/components/AppButton.jss';
+    <script>
+        //import AppButton from './js/components/AppButton.jss';
 
         let app = {
             components: {
-                'appButton': appButton
+                'appButton': {
+                    template: `
+                        <button class="bg-gray-200 hover:bg-gray-400 border rounded px-5 py-2 disabled:cursor-not-allowed" :disabled="processing"><slot /></button>
+                    `,
+                    data() {
+                        return {
+                            processing: true
+                        }
+                    }
+                }
             }
         };
 
