--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 </head>
 
 <body class="h-full grid place-items-center">
-    <div id="app">
-        <app-button :processing="true">Test7</app-button>
-    </div>
+    <div id="app"></div>
 
     <script type="module">
         import App from './js/components/App.js';
